testing/stage_20/invalid/take_value_of_void_function.c
void test()
{
	return 2;
}

int main()
{
	int a=2+test()
	return a;
}